--- a/package.json
+++ b/package.json
@@ -8,24 +8,40 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
+    "test": "mocha --require ts-node/register dist/test/**.test.js",
     "start": "nodemon dist/index.js",
     "devstart": "tsc && nodemon dist/index.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/swagger-jsdoc": "^6.0.4",
     "typescript": "^5.4.3"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/chai": "^4.3.14",
+    "@types/chai-http": "^4.2.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mocha": "^10.0.6",
+    "@types/sinon": "^17.0.3",
+    "@types/swagger-ui-express": "^4.1.6",
     "bcryptjs": "^2.4.3",
+    "chai": "^5.1.0",
+    "chai-http": "^4.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.4.0",
     "mongoose": "^8.2.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "nyc": "^15.1.0",
+    "sinon": "^17.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
   }
 }
