--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devstart": "tsc && nodemon dist/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "@types/supertest": "^6.0.2",
@@ -33,6 +34,7 @@
     "bcryptjs": "^2.4.3",
     "chai": "^5.1.0",
     "chai-http": "^4.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.12.2",
@@ -50,11 +52,12 @@
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
-    "reporter": [        
-    "html",
-    "lcov",
-    "text",
-    "text-summary"],
+    "reporter": [
+      "html",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
     "report-dir": "coverage",
     "exclude": [
       "**/*.d.ts",
@@ -62,5 +65,4 @@
       "src/**/*.ts"
     ]
   }
-    
 }
