--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/base:current
+      - image: cimg/node:21.7.2-browsers
 
     steps:
       - checkout
@@ -11,20 +11,16 @@ jobs:
           command: "echo Hello, World!"
       - run:
           name: Install Dependencies
-          command: yarn install
+          command: yarn
       - run:
           name: Build app
           command: yarn build
 
   store_test_results:
     docker:
-      - image: cimg/base:current
+      - image: cimg/node:21.7.2-browsers
 
     steps:
-      - checkout
-      - run:
-          name: Install Dependencies
-          command: yarn
       - run:
           name: Run Tests
           command: yarn test
