Adding continuous integration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,4 @@ workflows:
             - build
       - deploy:
           requires:
-            - store_test_results
-          filters:
-            branches:
-              only:
-                - main
+            - build
