Adding deploying job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,4 +51,8 @@ workflows:
             - build
       - deploy:
           requires:
-            - build
+            - store_test_results
+          filters:
+            branches:
+              only:
+                - main
