--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,16 @@ jobs:
           path: ~/project/test-results
           destination: test-results
 
+  deploy:
+    docker:
+      - image: cimg/node:21.7.1
+    steps:
+      - checkout
+      - run:
+          name: Deploy to Render
+          command: |
+            curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${RENDER_API_KEY}" -d '{"branch":"main"}' https://api.render.com/deploy/srv-cob7vnv79t8c73bpmg7g?key=${RENDER_DEPLOY_HOOK}
+
 workflows:
   build_and_test:
     jobs:
@@ -39,3 +49,10 @@ workflows:
       - store_test_results:
           requires:
             - build
+      - deploy:
+          requires:
+            - store_test_results
+          filters:
+            branches:
+              only:
+                - main
