--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,15 +32,15 @@ jobs:
           path: ~/project/test-results
           destination: test-results
 
-  # deploy:
-  #   docker:
-  #     - image: cimg/node:21.7.1
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Deploy to Render
-  #         command: |
-  #           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${RENDER_API_KEY}" -d '{"branch":"main"}' https://api.render.com/deploy/srv-co62884f7o1s73aa7jr0?key=${RENDER_DEPLOY_HOOK}
+  deploy:
+    docker:
+      - image: cimg/node:21.7.1
+    steps:
+      - checkout
+      - run:
+          name: Deploy to Render
+          command: |
+            curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${RENDER_API_KEY}" -d '{"branch":"main"}' https://api.render.com/deploy/srv-co62884f7o1s73aa7jr0?key=${RENDER_DEPLOY_HOOK}
 
 workflows:
   build_and_test:
@@ -49,10 +49,10 @@ workflows:
       - store_test_results:
           requires:
             - build
-      # - deploy:
-      #     requires:
-      #       - store_test_results
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
+      - deploy:
+          requires:
+            - store_test_results
+          filters:
+            branches:
+              only:
+                - main
