--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mocha": "^10.0.6",
+    "@types/nodemailer": "^6.4.14",
     "@types/sinon": "^17.0.3",
     "@types/swagger-ui-express": "^4.1.6",
     "bcryptjs": "^2.4.3",
@@ -41,6 +42,7 @@
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.4.0",
     "mongoose": "^8.2.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "nyc": "^15.1.0",
     "sinon": "^17.0.1",
