Fixing circleCI Deploy Job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run:
           name: Deploy to Render
           command: |
-            curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${RENDER_API_KEY}" -d '{"branch":"main"}' https://api.render.com/deploy/srv-co62884f7o1s73aa7jr0?key=${RENDER_DEPLOY_HOOK}
+            curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${RENDER_API_KEY}" -d '{"branch":"main"}' https://api.render.com/deploy/srv-co62884f7o1s73aa7jr0?key=deo1O2Y5FAM
 
 workflows:
   build_and_test:
